--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rd_party/osqp-eigen"]
 	path = 3rd_party/osqp-eigen
 	url = https://github.com/itadera/osqp-eigen
+[submodule "3rd_party/magic_enum"]
+	path = 3rd_party/magic_enum
+	url = https://github.com/itadera/magic_enum.git
