--- a/ohrc_teleoperation/CMakeLists.txt
+++ b/ohrc_teleoperation/CMakeLists.txt
@@ -9,6 +9,7 @@ project(ohrc_teleoperation)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  ohrc_teleoperation
 )
 
 ## System dependencies are found with CMake's conventions
