--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: pre build
       run: |
         source /opt/ros/noetic/setup.bash
-        cd ${CATKIN_WS}/src/ros_lecture
+        cd ${CATKIN_WS}/src/OpenHRC
         git submodule update --init --recursive
         rosdep update
         rosdep install -i -y --from-paths ./
