--- a/ohrc_control/package.xml
+++ b/ohrc_control/package.xml
@@ -77,7 +77,10 @@
   <depend>tf2_eigen</depend>
   <depend>std_msgs</depend>
   <depend>eigen_conversions</depend>
+  <depend>ros_controllers</depend>
+ 
   <depend>ohrc_common</depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
