fix namespace bug for toroboarm

--- a/ohrc_control/CMakeLists.txt
+++ b/ohrc_control/CMakeLists.txt
@@ -70,11 +70,11 @@ find_package(magic_enum CONFIG REQUIRED magic_enum)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  State.msg
-  StateStamped.msg
-)
+# add_message_files(
+#   FILES
+#   State.msg
+#   StateStamped.msg
+# )
 ## Generate services in the 'srv' folder
 # add_service_files(
 #   FILES
@@ -90,11 +90,11 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  std_msgs # Or other packages containing msgs
-  geometry_msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs # Or other packages containing msgs
+#   geometry_msgs
+# )
 
 
 ################################################
