--- a/ohrc_teleoperation/config/omega_config.yaml
+++ b/ohrc_teleoperation/config/omega_config.yaml
@@ -1,2 +1,2 @@
-omega_type: "left"
-haptic_type: "PositionPositionFeedback" #None or PositionPositionFeedback or PositionForce or PositionForceFeedback
+omega_type: "right"
+haptic_type: "None" #"PositionPositionFeedback" #None or PositionPositionFeedback or PositionForce or PositionForceFeedback
