--- a/ohrc_msgs/CMakeLists.txt
+++ b/ohrc_msgs/CMakeLists.txt
@@ -1,23 +1,19 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(ohrc_teleoperation)
+project(ohrc_msgs)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-add_compile_options(-std=c++17)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  ohrc_control
-  
-
-  interactive_markers
+find_package(catkin REQUIRED
+    std_msgs
+    geometry_msgs
+    message_generation
+    message_runtime
 )
 
-find_package(OsqpEigen REQUIRED)
-
-find_package(magic_enum CONFIG REQUIRED)
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
@@ -52,11 +48,12 @@ find_package(magic_enum CONFIG REQUIRED)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  State.msg
+  StateStamped.msg
+  Gripper.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -73,10 +70,11 @@ find_package(magic_enum CONFIG REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs  # Or other packages containing msgs
+  geometry_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -108,9 +106,9 @@ find_package(magic_enum CONFIG REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- INCLUDE_DIRS include 
- LIBRARIES ohrc_teleoperation 
- CATKIN_DEPENDS roscpp 
+#  INCLUDE_DIRS include
+#  LIBRARIES ohrc_msgs
+#  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
 )
 
@@ -121,13 +119,13 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
+# include
+# ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/ohrc_teleoperation.cpp
+#   src/${PROJECT_NAME}/ohrc_msgs.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -138,7 +136,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/ohrc_teleoperation_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/ohrc_msgs_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -154,18 +152,6 @@ include_directories(
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-
-set(interfaces
-  marker
-  omega
-)
-
-foreach(interface ${interfaces})
-  add_executable(${interface}_teleoperation src/interface/${interface}_interface.cpp src/app/${interface}_teleoperation.cpp)
-  add_dependencies(${interface}_teleoperation ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-  target_link_libraries(${interface}_teleoperation ${catkin_LIBRARIES} OsqpEigen::OsqpEigen magic_enum::magic_enum)
-endforeach(interface)
-
 
 #############
 ## Install ##
@@ -214,7 +200,7 @@ endforeach(interface)
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_ohrc_teleoperation.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_ohrc_msgs.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
