--- a/ohrc_msgs/package.xml
+++ b/ohrc_msgs/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ohrc_control</name>
+  <name>ohrc_msgs</name>
   <version>0.0.0</version>
-  <description>The ohrc_control package</description>
+  <description>The ohrc_msgs package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="shunki@aist.go.jp">Shunki Itadera</maintainer>
+  <maintainer email="s.itadera@aist.go.jp">shunki</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ohrc_control</url> -->
+  <!-- <url type="website">http://wiki.ros.org/ohrc_msgs</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -37,9 +37,9 @@
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
-    <!-- <build_depend>message_generation</build_depend> -->
+    <build_depend>message_generation</build_depend>
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
-  <!--   <build_export_depend>message_generation</build_export_depend> -->
+    <build_export_depend>message_generation</build_export_depend>
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use exec_depend for packages you need at runtime: -->
@@ -49,38 +49,9 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
 
-  <depend>boost</depend>
-  <depend>trac_ik_lib</depend>
-
-  <depend>liborocos-kdl-dev</depend>
-  <depend>libnlopt-dev</depend>
-  <depend>libnlopt-cxx-dev</depend>
-
-
-  <depend>osqp</depend>
-  <depend>osqp-eigen</depend>
-
-  <depend>magic_enum</depend>
-
-
-  <depend>liborocos-kdl</depend>
-  <depend>xacro</depend>
-  <depend>libnlopt0</depend>
-  <depend>pr2_description</depend>
-
-  <depend>interactive_markers</depend>
-  <depend>tf2_kdl</depend>
-  <depend>tf2_eigen</depend>
   <depend>std_msgs</depend>
-  <depend>eigen_conversions</depend>
-  <depend>ros_controllers</depend>
- 
-  <depend>ohrc_common</depend>
-  <depend>ohrc_msgs</depend>
+  <depend>geometry_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
