--- a/ohrc_control/config/config.yaml
+++ b/ohrc_control/config/config.yaml
@@ -3,6 +3,7 @@ chain_end: "tool0" # target eff frame
 root_frame: "world" # IK calculation base frame (for multi-follower)
 
 controller: "Velocity"
+controller_topic_name: "joint_velocity_controller"
 solver: "MyIK" 
 
 control_freq: 500.0
