--- a/ohrc_control/config/config.yaml
+++ b/ohrc_control/config/config.yaml
@@ -1,21 +1,24 @@
-chain_start: "base_link" # base frame of commands
-chain_end: "tool0" # target eff frame
+### for IK optimization
+chain_start: "base" # base frame of commands
+chain_end: "link7" # target eff frame
 root_frame: "world" # IK calculation base frame (for multi-follower)
 
-controller: "Velocity"
-controller_topic_name: "joint_velocity_controller"
-solver: "MyIK" 
+
+controller: "Velocity" # "Position" or "Velocity"
+publisher: "Velocity" # "Position" or "Velocity" or "Trajectory" or "TrajectoryAction"
+topic_namespace: "joint_velocity_controller"
+
+solver: "MyIK"
 
 control_freq: 500.0
 
-
-initIKAngle: [0, -1., 2., -2.5, -1.5, 0]
-initial_pose: [0.35, 0.0, 0.3, 3.141592, 0, 0]
+initIKAngle: [0, 0, 0, 0, 0, 0, 0]
+initial_pose: [0.35, 0.0, 0.3, 0.0, 3.141592, 0]
 
 
 follower_list: # robot namespace list. They should be unique. ("") means the robot has no namespace
-  - ""
-  # - "toroboarm_2"
+  - "toroboarm_1"
+  - "toroboarm_2"
   # - "toroboarm_3"
   # - "toroboarm_4"
   # - "toroboarm_5"
@@ -24,6 +27,8 @@ follower_list: # robot namespace list. They should be unique. ("") means the rob
   # - "toroboarm_8"
   # - "toroboarm_9"
 
+
+### for MFBT framework, which is developed by S. Itadera
 priority: "Manual"  #"Automation" #  (for multi-follower)
 MF_mode: "Individual" #"Parallel" #   (for multi-follower)
 IK_mode: "Concatenated" # (for multi-follower)
