--- a/ohrc_teleoperation/example/fetch/fetch_control_config_vel_trj.yaml
+++ b/ohrc_teleoperation/example/fetch/fetch_control_config_vel_trj.yaml
@@ -11,7 +11,7 @@ solver: "MyIK"
 control_freq: 30.0
 
 initIKAngle: [0, 0., 0, 0, 0, 0, 0, 0] # size of this should be equal to DoF
-initial_pose: [0.2, 0.3, 1.1, 0, 0, 0]
+initial_pose: [0.3, 0.3, 1.1, 0, 0, 0] # [x, y, z, roll, pitch, yaw]
 
 follower_list: # robot namespace list. They should be unique. ("") means the robot has no namespace
   - ""
