--- a/ohrc_teleoperation/example/ur5e/ur5e_control_config.yaml
+++ b/ohrc_teleoperation/example/ur5e/ur5e_control_config.yaml
@@ -10,8 +10,8 @@ solver: "MyIK"
 
 control_freq: 500.0
 
-initIKAngle: [0, -1., 2., -2.5, -1.5, 0]
-initial_pose: [0.35, 0.0, 0.3, 3.141592, 0, 0]
+initIKAngle: [0, -1., 2., -2.5, -1.5, 0] # size of this should be equal to DoF
+initial_pose: [0.35, 0.0, 0.3, 3.141592, 0, 0] # [x, y, z, roll, pitch, yaw]
 
 follower_list: # robot namespace list. They should be unique. ("") means the robot has no namespace
   - ""
