--- a/ohrc_imitation_learning/package.xml
+++ b/ohrc_imitation_learning/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="shunki@todo.todo">shunki</maintainer>
+  <maintainer email="shunki@aist.go.jp">Shunki Itadera</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
