--- a/ohrc_teleoperation/package.xml
+++ b/ohrc_teleoperation/package.xml
@@ -56,6 +56,7 @@
   <depend>ohrc_control</depend>
   <depend>ohrc_msgs</depend>
   <depend>universal_robots</depend>
+  <depend>ohrc_common</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
