add option to config.yaml

--- a/ohrc_control/config/config.yaml
+++ b/ohrc_control/config/config.yaml
@@ -10,6 +10,8 @@ topic_namespace: "joint_velocity_controller"
 
 solver: "MyIK"
 
+self_collision_avoidance: true
+
 control_freq: 500.0
 
 initIKAngle: [0, 0, 0, 0, 0, 0, 0]
