--- a/ohrc_teleoperation/example/fetch/fetch_control_config_pos_trj.yaml
+++ b/ohrc_teleoperation/example/fetch/fetch_control_config_pos_trj.yaml
@@ -8,6 +8,8 @@ topic_namespace: "arm_with_torso_controller"
 
 solver: "MyIK"
 
+self_collision_avoidance: true
+
 control_freq: 50.0
 
 initIKAngle: [0, 0., 0, 0, 0, 0, 0, 0] # size of this should be equal to DoF
