--- a/ohrc_automation/package.xml
+++ b/ohrc_automation/package.xml
@@ -53,6 +53,8 @@
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
 
+  <depend>ohrc_control</depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
