--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,4 +37,10 @@ jobs:
         source /opt/ros/noetic/setup.bash
         cd ${CATKIN_WS}
         catkin build
+
+    - name: test
+      run: |
+        source /opt/ros/noetic/setup.bash
+        cd ${CATKIN_WS}
+        catkin test
         
