--- a/ohrc_msgs/package.xml
+++ b/ohrc_msgs/package.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ohrc_msgs</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>The ohrc_msgs package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="s.itadera@aist.go.jp">shunki</maintainer>
 
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
-
+  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
+  <license>MIT</license>
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
