--- a/ohrc_teleoperation/package.xml
+++ b/ohrc_teleoperation/package.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ohrc_teleoperation</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>The ohrc_teleoperation package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="shunki@todo.todo">shunki</maintainer>
-
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
