--- a/ohrc_teleoperation/package.xml
+++ b/ohrc_teleoperation/package.xml
@@ -50,8 +50,8 @@
   <depend>universal_robots</depend>
   <depend>ohrc_common</depend>
 
-  <depend>spacenavd</depend>
-  <depend>spacenav_node</depend>
+  <!-- <depend>spacenavd</depend> -->
+  <!-- <depend>spacenav_node</depend> -->
 
 
   <!-- The export tag contains other, unspecified, tags -->
