--- a/ohrc_teleoperation/package.xml
+++ b/ohrc_teleoperation/package.xml
@@ -5,7 +5,7 @@
   <description>The ohrc_teleoperation package</description>
 
   <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
-  <license>MIT</license>
+  <license>LGPL</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
