--- a/ohrc_control/package.xml
+++ b/ohrc_control/package.xml
@@ -75,6 +75,7 @@
   <depend>ohrc_common</depend>
   <depend>ohrc_msgs</depend>
   
+  <depend>python3-catkin-tools</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
