--- a/ohrc_openxr/package.xml
+++ b/ohrc_openxr/package.xml
@@ -53,6 +53,8 @@
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <depend>stb</depend>
+   <depend>ohrc_msgs</depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
