--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "3rd_party/stb"]
 	path = 3rd_party/stb
 	url = https://github.com/itadera/stb
+[submodule "3rd_party/OpenXR-SDK"]
+	path = 3rd_party/OpenXR-SDK
+	url = https://github.com/itadera/OpenXR-SDK.git
