--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,8 +15,8 @@ jobs:
       with:
         required-ros-distributions: noetic
 
-    # - name: Install catkin tool
-    #   run: sudo apt-get install python3-catkin-tools
+    - name: Install X11 LibXCB for OpenXR
+      run: sudo apt install libx11-xcb-dev libxcb-dri2-0-dev libxcb-glx0-dev libxcb-icccm4-dev libxcb-keysyms1-dev libxcb-randr0-dev
 
     - name: Init workspace
       run: |
