--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
         cd ${CATKIN_WS}/src/OpenHRC
         git submodule update --init --recursive
         rosdep update
-        rosdep install -i -y --from-paths ./ 
+        rosdep install --ignore-src -y -r --from-paths ./ 
 
     - name: build
       run: |
