--- a/ohrc_openxr/CMakeLists.txt
+++ b/ohrc_openxr/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project(ohrc_openxr)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++1z)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -115,7 +115,7 @@ PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES ohrc_openxr
+ LIBRARIES ohrc_openxr
 #  CATKIN_DEPENDS roscpp
 #  DEPENDS system_lib
 )
