--- a/ohrc_openxr/package.xml
+++ b/ohrc_openxr/package.xml
@@ -13,7 +13,7 @@
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>LGPLv3</license>
+  <license>LGPLv2.1</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -53,6 +53,8 @@
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <build_depend>OpenXR</build_depend>
+  <build_depend>OPENXR</build_depend>
+
   <depend>stb</depend>
   <depend>ohrc_msgs</depend>
 
