--- a/ohrc_automation/package.xml
+++ b/ohrc_automation/package.xml
@@ -5,7 +5,7 @@
   <description>The ohrc_automation package</description>
 
   <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
-  <license>LGPL</license>
+  <license>LGPLv2.1</license>
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
