--- a/ohrc_control/package.xml
+++ b/ohrc_control/package.xml
@@ -6,7 +6,7 @@
 
 
   <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
-  <license>LGPL</license>
+  <license>LGPLv2.1</license>
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
