--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,7 @@ jobs:
         source /opt/ros/noetic/setup.bash
         cd ${CATKIN_WS}
         rospack profile
+        catkin build OPENXR -DCMAKE_BUILD_TYPE=Release
         catkin build -DCMAKE_BUILD_TYPE=Release
 
     - name: test
