--- a/ohrc_openxr/CMakeLists.txt
+++ b/ohrc_openxr/CMakeLists.txt
@@ -129,6 +129,7 @@ catkin_package(
 include_directories(
 include
   ${catkin_INCLUDE_DIRS}
+  ${OpenXR_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
