--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,8 +15,10 @@ jobs:
       with:
         required-ros-distributions: noetic
 
-    - name: Install X11 LibXCB for OpenXR
-      run: sudo apt install libx11-xcb-dev libxcb-dri2-0-dev libxcb-glx0-dev libxcb-icccm4-dev libxcb-keysyms1-dev libxcb-randr0-dev
+    - name: Install libs for OpenXR
+      run: 
+        sudo apt install libx11-xcb-dev libxcb-dri2-0-dev libxcb-glx0-dev libxcb-icccm4-dev libxcb-keysyms1-dev libxcb-randr0-dev
+        sudo apt install libsdl2-dev
 
     - name: Init workspace
       run: |
