--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
         required-ros-distributions: noetic
 
     - name: Install libs for OpenXR
-      run: 
+      run: |
         sudo apt install libx11-xcb-dev libxcb-dri2-0-dev libxcb-glx0-dev libxcb-icccm4-dev libxcb-keysyms1-dev libxcb-randr0-dev
         sudo apt install libsdl2-dev
 
