--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Setup ROS
-      uses: ros-tooling/setup-ros@v0.4
+      uses: ros-tooling/setup-ros@v0.6
       with:
         required-ros-distributions: noetic
 
@@ -45,7 +45,7 @@ jobs:
         catkin test
         
 
-  build:
+  docker_build:
     runs-on: ubuntu-latest
     env:
       WS: /home/runner/work
