--- a/ohrc_teleoperation/config/omega_config.yaml
+++ b/ohrc_teleoperation/config/omega_config.yaml
@@ -1,3 +1,3 @@
-omega_type: "left"
+omega_type: "right"
 haptic_type: "None" #"PositionPositionFeedback" #None or PositionPositionFeedback or PositionForce or PositionForceFeedback
 trans_ratio: 2.0
