--- a/ohrc_perception/CMakeLists.txt
+++ b/ohrc_perception/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_srvs
   ohrc_common
   ohrc_msgs
+  tf2_ros
 )
 
 ## System dependencies are found with CMake's conventions
@@ -126,6 +127,7 @@ include_directories(
 
 set(singles
   ft_filter
+  k4abt_body_state_publisher
 )
 
 foreach(single ${singles})
