new file:   ohrc_hw_config/crane_x7/crane_x7_control_config_pos_trj.yaml

--- a/ohrc_hw_config/crane_x7/crane_x7_control_config_vel_trj.yaml
+++ b/ohrc_hw_config/crane_x7/crane_x7_control_config_vel_trj.yaml
@@ -1,19 +1,19 @@
 chain_start: "base_link" # base frame of commands
-chain_end: "link6_flange" # target eff frame
+chain_end: "crane_x7_gripper_base_link" # target eff frame
 root_frame: "base_link" # IK calculation base frame (for multi-follower)
 
-controller: "Position" # "Position" or "Velocity"
+controller: "Velocity" # "Position" or "Velocity"
 publisher: "Trajectory" # "Position" or "Velocity" or "Trajectory" or "TrajectoryAction"
-topic_namespace: "arm_controller"
+topic_namespace: "/crane_x7/arm_controller"
 
 solver: "MyIK"
 
 self_collision_avoidance: true
 
-control_freq: 50.0
+control_freq: 30.0
 
-initIKAngle: [0, 0., 0, 0, 0, 0, 0] # size of this should be equal to DoF
-initial_pose: [0.2, 0., 0.3, 0, 0, 0] # [x, y, z, roll, pitch, yaw]
+initIKAngle: [0, 0., 0, 0, 0, 0, 0, 0] # size of this should be equal to DoF
+initial_pose: [0.2, 0.0, 0.36, 0, 0, 0] # [x, y, z, roll, pitch, yaw]
 
 follower_list: # robot namespace list. They should be unique. ("") means the robot has no namespace
   - ""
